--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,15 @@ Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
+cffi==0.9.2
+cryptography==0.8.1
+enum34==1.0.4
 itsdangerous==0.24
 nltk==3.0.0
+protobuf==2.5.0
+pyOpenSSL==0.14
+pyasn1==0.1.7
+pycparser==2.10
+riak==2.2.0
+riak-pb==2.0.0.16
+six==1.9.0
